test/types/imag/opequals2.1.good
opequals2.chpl:5: error: Cannot assign to imag(64) from complex(128)
