test/types/imag/opequals2.chpl
config param test = 0;

var i = 1.0i;

if (test == 1) then i += 1.0;
if (test == 2) then i -= 1.0;
if (test == 3) then i *= 1.0i;
if (test == 4) then i /= 1.0i;

writeln(i);


